Se modifico el proyecto a uno que si funciona

--- a/myappconsultarapi/app/src/main/res/values/strings.xml
+++ b/myappconsultarapi/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">myappconsultarapia</string>
+    <string name="app_name">myappconsultarapi</string>
     <string name="Consultar">Consultar</string>
 </resources>
